examples/griff/error/ErrorOnlySig.grf
module ErrorOnlySig = {
  foo :: Int32# -> ();
}